[project]
name = "comfyui-stereo-gaussian"
version = "0.1.0"
description = "Stereoscopic VR rendering from 3D Gaussian Splats for ComfyUI"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "gsplat>=1.0.0",
    "torch>=2.0.0",
]

[project.urls]
Repository = "https://github.com/artokun/ComfyUI-Stereo-Gaussian"
